# Hw06

./: hw06.py  hw_06.db  import sqlite3.py  pyproject.toml  query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  select_query.py  table_hw6.sql
